# fastapi-sqlalchemy-cockroachdb

./: .env.example  .gitignore  README.md  catalog-info.yaml  docker-compose.sqlite.yaml  docker-compose.yaml  module1.bats  module2.bats  requirements.txt
.github/workflows/: build-push-oci.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  prometheus-rbac.yaml
chart/templates/backend/: deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
chart/templates/backend/prometheus/: prometheusrule.yaml  servicemonitor.yaml
chart/templates/frontend/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/frontend/prometheus/: prometheusrule.yaml  servicemonitor.yaml
chart/templates/tests/: test-backend-service.yaml  test-frontend-service.yaml
deploy/docker-compose/: docker-compose.yaml  envoy-web.yml
deploy/envoy/: envoy-rdb.yml  envoy-web.yml
hack/: deploy-k3s.sh  init.sh  make-lab.sh  populate-docker.sh  populate-k3s.sh  populate-local.sh  run-app.sh  run-lab.sh  run.sh
make/: deploy-k3s.sh  init.sh  run.sh
scripts/: entrypoint.sh
specs/: openapi.yaml
src/backend/: Dockerfile  catalog-info.yaml  entrypoint.sh  setup.cfg
src/backend/src/: asgi.py  sqlite.db
src/backend/src/backendservice/: app.py  config.py  database.py  load_data.py
src/backend/src/backendservice/controllers/: health.py  postgres.py  status_code.py
src/backend/src/backendservice/models/: crud.py  postgres.py  schemas.py  sqlite.py
src/backend/src/backendservice/models/postgres/: crud.py  models.py  schemas.py
src/backend/src/backendservice/utils/: telemetry.py  userid.py
src/backend/src/tests/: conftest.py  populate.py
src/backend/src/tests/unit/: test_models.py  test_routes.py
src/fakenamesservice/: app.py  asgi.py  config.py  telemetry.py
src/fakenamesservice/controllers/: apis.py
src/fakenamesservice/models/: crud.py  schemas.py
src/fakenamesservice/utils/: telemetry.py  userid.py
src/frontend/: Dockerfile  catalog-info.yaml  setup.cfg
src/frontend/src/: asgi.py
src/frontend/src/frontendservice/: app.py  config.py
src/frontend/src/frontendservice/controllers/: health.py  status.py
src/frontend/src/frontendservice/utils/: telemetry.py
src/frontend/src/frontendservice/views/: fakenames.py  index.py  oauth.py  postgres.py
src/frontend/src/frontendservice/views/dashboards/: postgres.py
src/frontend/src/frontendservice/views/templates/: index.html.jinja  layout.html.jinja  oauth.html.jinja  postgres.html.jinja
tests/: __init__.py  conftest.py  populates_db.py
tests/integration/: containers.bats  locustfile.py  test_model.py  test_routes.py  thunder-collection.json  thunder-collection_apigateway_python-webdemo.json  thunder-environment.json  thunder-environment_Emmett Brown.json
