# Docs https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = webdemo-backendservice
version = file: VERSION
description = Python module to demonstrate web service deployment
long_description = file: README.md
license = MIT
url = https://github.com/testruction/fastapi-sqlalchemy-cockroachdb
author = Florian JUDITH
author_email = florian.judith.b@gmail.com
keywords =
    service
    api
    aws
    cockroachdb
    postgres

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.8

install_requires =
    PyJWT==2.8.0
    fastapi==0.101.0
    hypercorn==0.14.4
    uvicorn==0.23.1
    jinja2==3.1.2
    boto3==1.28.8
    psycopg2-binary==2.9.6
    sqlalchemy-cockroachdb==2.0.1
    opentelemetry-exporter-otlp
    opentelemetry-instrumentation-dbapi
    opentelemetry-instrumentation-fastapi
    opentelemetry-instrumentation-logging
    opentelemetry-instrumentation-psycopg2

[options.extras_require]
dev =
    build
    cryptography

tests =
    pytest
    pytest-dotenv
    httpx


[options.package_data]
* = VERSION, README.md


[options.entry_points]
console_scripts =
    backendservice = backendservice:app


[flake8]
ignore = E501