# Docs https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = webdemo-frontendservice
version = file: VERSION
description = Python module to demonstrate web service deployment
long_description = file: README.md
license = MIT
url = https://github.com/testruction/fastapi-sqlalchemy-cockroachdb
author = PLEX PIA SUPPORT
author_email = plex-ia-support@cdpq.com
keywords =
    webservice
    dashboard
    aws
    postgres

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.8

install_requires =
    PyJWT==2.6.0
    fastapi==0.95.0
    hypercorn==0.14.3
    uvicorn==0.21.1
    jinja2==3.1.2
    boto3==1.26.98
    dash==2.9.1
    pandas==1.5.3
    httpx==0.23.3
    opentelemetry-exporter-otlp
    opentelemetry-instrumentation-httpx
    opentelemetry-instrumentation-fastapi
    opentelemetry-instrumentation-logging

[options.extras_require]
dev =
    build
    cryptography

tests =
    pytest
    pytest-dotenv

[options.package_data]
* = *.json, *.yaml, *.csv, *.sql, VERSION, *.jinja, README.md, *.css, *.svg, *.ico


[options.entry_points]
console_scripts =
    frontendservice = frontendservice:app


[tool.pytest]
minversion = 6.0
addopts = -ra -q
log_cli = true
log_cli_level = INFO
# asyncio_mode = "auto"
env_files =
    .env


[flake8]
ignore = E501